# high_altitude_balloon

./: .gitignore  327_hab.kicad_sch  README.md  high_altitude_balloon.kicad_prl  high_altitude_balloon.kicad_pro  high_altitude_balloon.kicad_sch  ~high_altitude_balloon.kicad_sch.lck
firmware/: .ccsproject  .cproject  .gitignore  .project  CMakeLists.txt  empty.c  empty.syscfg
firmware/Debug/: ccsObjs.opt  empty.d  hab-v2.map  hab-v2.out  hab-v2_linkInfo.xml  makefile  sources.mk  startup_mspm0g350x_ticlang.d  subdir_rules.mk  subdir_vars.mk  ti_msp_dl_config.c  ti_msp_dl_config.d  ti_msp_dl_config.h
firmware/Debug/.clangd/: compile_commands.json
firmware/Debug/.clangd/.cache/clangd/index/: CMakeCCompilerId.c.CC3726409A2E22A3.idx  app1.c.DA8672CDBC8EF2DB.idx  (+44 more)
firmware/Debug/generated_syscfg/: subdir_rules.mk  subdir_vars.mk  ti_msp_dl_config.d
firmware/Debug/src/: hab_app.d  hab_bme680.d  hab_gps.d  hab_lora_sx1276.d  hab_math.d  hab_protocol.d  hab_sd_fatfs.d  main.d  platform_stub.d  subdir_rules.mk  subdir_vars.mk
firmware/Debug/src/platform/: diskio_mspm0.d  platform_mspm0_ccs.d  subdir_rules.mk  subdir_vars.mk
firmware/include/: hab_app.h  hab_bme680.h  hab_config.h  hab_gps.h  hab_lora_sx1276.h  hab_math.h  hab_platform.h  hab_protocol.h  hab_sd_fatfs.h  hab_types.h
firmware/include/platform/: hab_mspm0_ccs.h  mspm0_ccs_config.h
firmware/src/: hab_app.c  hab_bme680.c  hab_gps.c  hab_lora_sx1276.c  hab_math.c  hab_protocol.c  hab_sd_fatfs.c  main.c  platform_stub.c
firmware/src/platform/: diskio_mspm0.c  platform_mspm0_ccs.c
pcb/v1/: 328.kicad_pcb  (+5 more)
(+84 files in other folders)
